===========================
Isotope eCommerce Changelog
===========================

Version 0.3.beta1
------------------------------
- Added: "advanced prices" allow to define a prices for store configs, member groups, start/stop dates
- Added: Availability check for products

Version 0.2.beta2
------------------------------
- Added: New "link target" field and help wizard to media manager
- Added: IsotopeGallery now supports link targets and "rel" attributes
- Added: Support for 13 more currencies in ePay Standard payment module
- Added: New payment module for ePay in-shop payment processing
- Added: CSS class even/odd for product list
- Added: Define custom image sizes using a wizard
- Added: Watermark option for all images
- Added: Addresses are added to address book on checkout (enable in checkout module) (Ticket #24)
- Added: Abstract class ContentIsotope to build content elements
- Added: Cybersource payment gateway
- Added: Frontend modules now support theme templates
- Improved: Downloads can now be added to product variants (Ticket #116)
- Improved: PayPal Standard now shows products on paypal page (Ticket #146)
- Improved: Product reader now has a "back" link (Ticket #197)
- Improved: Downloads is now a tools option (Ticket #116)
- Improved: authnet_response and authnet_reason to generic transaction_response and transaction_response_code
- Improved: Remove form errors when selecting a new product variant
- Improved: Empty option labels are now taken as blankOptionLabel for variant select menus
- Improved: Variant products don't show select menus with only one option
- Improved: Cart module now hides button withouth a target page (jump to cart/checkout)
- Improved: Authorize.net now PCI-compliant - no longer storing card data in session
- Fixed: cart_html and cart_text now include subtotal, surcharges and grand total (Ticket #34)
- Fixed: Variant price should not show "From" when all variants have the same price