@@ -70,7 +70,7 @@ $GLOBALS['TL_DCA']['tl_iso_config'] = array
 			'back' => array
 			(
 				'label'               => &$GLOBALS['TL_LANG']['MSC']['backBT'],
-				'href'                => 'table=',
+				'href'                => 'mod=',
 				'class'               => 'header_back',
 				'attributes'          => 'onclick="Backend.getScrollOffset();"',
 			),
@@ -423,11 +423,6 @@ $GLOBALS['TL_DCA']['tl_iso_config'] = array
 );
 
 
-/**
- * tl_iso_config class.
- * 
- * @extends Backend
- */
 class tl_iso_config extends Backend
 {
 	
