@@ -6,6 +6,7 @@ Version 0.3.beta1
 ------------------------------
 - Added: "advanced prices" allow to define a prices for store configs, member groups, start/stop dates
 - Added: Availability check for products
+- Improved: Better Isotope module handling, including callback support
 
 Version 0.2.beta2
 ------------------------------
